# sfexample

./: README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/fsexample/fsexample/: MainActivity.java
app/src/main/java/fsexample/fsexample/common/: AppBroadcast.java  Constant.java  MXMidiStatic.java  MXQueue.java  MXUtil.java
app/src/main/java/fsexample/fsexample/midione/: MidiOne.java  MidiOneSetting.java
app/src/main/java/fsexample/fsexample/midione/drivers/android/: OneDeviceDefault.java  OneDriverDefault.java
app/src/main/java/fsexample/fsexample/midione/drivers/fluid/: FluidSetting.java  FontFileEntry.java  FontFileManager.java  JFluid.java  OneDeviceSoundFont.java  OneDriverSoundFont.java  ProgramEntry.java
app/src/main/java/fsexample/fsexample/midione/drivers/none/: OneDeviceNone.java  OneDriverNone.java  OneInputNone.java
app/src/main/java/fsexample/fsexample/midione/v1/: OneConnectionListener.java  OneDevice.java  OneDispatcher.java  OneDriver.java  OneEventCounter.java  OneInput.java  OneMessage.java  OneMessageFactory.java  OneOutput.java
app/src/main/java/fsexample/fsexample/namedvalue/: NamedValue.java  NamedValueList.java
app/src/main/java/fsexample/fsexample/ui/midiselector/: MidiSelectorFragment.java
app/src/main/java/fsexample/fsexample/userchoice/: BasicUserChoiceElement.java  UserChoiceAdapter.java  UserChoiceElement.java  UserChoiceView.java
app/src/main/java/fsexample/fsexample/watchable/: MXWatchable.java  MXWatchableCategory.java  MXWatchableGroup.java  MXWatchableGroupAdapter.java  MXWatchableGroupView.java  MXWatchableListener.java  MXWatchableListenerList.java  MXWatchableRequestHook.java
app/src/main/java/fsexample/fsexample/watchable/generic/: MXWatchableBoolean.java  MXWatchableBooleanYesNo.java  MXWatchableFloat.java  MXWatchableInteger.java  MXWatchableString.java  MXWatchableTabled.java
app/src/main/java/fsexample/fsexample/watchable/withapp/: MXWatchableSoundFontName.java
app/src/main/res/drawable/: ic_config.xml  ic_launcher_background.xml  ic_launcher_round.xml  rounded_corner_list_cell.xml  rounded_corner_list_cell_focused.xml  rounded_corner_list_cell_reserved.xml  transparent.xml
app/src/main/res/layout/: activity_main.xml  fragment_midi_selector.xml  view_user_choice.xml  view_user_choice_element.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-v33/: styles.xml
app/src/main/res/xml/: device_filter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
